[gd_scene load_steps=9 format=3 uid="uid://q2lvrrcqcirf"]

[ext_resource type="Script" uid="uid://bmdl7trph1eue" path="res://src/scripts/Panels/ferrite_refinery_station.gd" id="1_ai323"]
[ext_resource type="Texture2D" uid="uid://crcd7gukxb3ng" path="res://assets/graphics/refineryused.png" id="2_7nq2t"]
[ext_resource type="Texture2D" uid="uid://c3db7jk5m1nx5" path="res://assets/graphics/UI/purchase_refinery_button.png" id="3_dx13i"]
[ext_resource type="FontFile" uid="uid://50qlm4au2mjm" path="res://assets/graphics/Fonts/Valorax-lg25V.otf" id="3_qxr35"]
[ext_resource type="Texture2D" uid="uid://r0oufreep8d7" path="res://assets/graphics/platinum_ui_icon.png" id="4_dx13i"]
[ext_resource type="Texture2D" uid="uid://cpjfvjd0dtkc2" path="res://assets/graphics/UI/purchase_refinery_button_hover.png" id="4_fvpmm"]
[ext_resource type="Texture2D" uid="uid://ccvgyp58gsqdf" path="res://assets/graphics/UI/purchase_refinery_button_disablled.png" id="5_3e61l"]
[ext_resource type="Texture2D" uid="uid://cwybcj71km81k" path="res://assets/graphics/refined_ferrite_ui_icon.png" id="8_3e61l"]

[node name="FerriteRefinery" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -58.0
offset_right = 72.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ai323")

[node name="Graphic" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.5
offset_top = -30.0
offset_right = 71.5
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7nq2t")

[node name="OutputLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = -1.0
offset_right = 66.0
offset_bottom = 11.0
theme_override_fonts/font = ExtResource("3_qxr35")
theme_override_font_sizes/font_size = 7
text = "Output: 23"

[node name="CostLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_top = -1.0
offset_right = -6.0
offset_bottom = 8.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("3_qxr35")
theme_override_font_sizes/font_size = 7
text = "Cost: 65"

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
offset_left = 6.0
offset_top = 64.0
offset_right = 141.0
offset_bottom = 70.0
show_percentage = false

[node name="PurchasePanel" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.811765)
layout_mode = 0
offset_top = -5.0
offset_right = 150.0
offset_bottom = 72.0
color = Color(0.180005, 0.180005, 0.180005, 1)

[node name="PurchaseRefineryStation" type="TextureButton" parent="PurchasePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -15.0
offset_right = 46.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_dx13i")
texture_hover = ExtResource("4_fvpmm")
texture_disabled = ExtResource("5_3e61l")

[node name="RefineryCostLabel" type="Label" parent="PurchasePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_top = 10.0
offset_right = 58.5
offset_bottom = 21.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qxr35")
theme_override_font_sizes/font_size = 9
text = "cost: 13434"

[node name="PlatinumUiIcon" type="Sprite2D" parent="PurchasePanel"]
position = Vector2(45, 15)
texture = ExtResource("4_dx13i")

[node name="Label" type="Label" parent="PurchasePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -16.0
offset_right = 57.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qxr35")
theme_override_font_sizes/font_size = 8
text = "Ferrite Refinery"

[node name="RefinedFerriteUiIcon" type="Sprite2D" parent="PurchasePanel"]
position = Vector2(30, 66)
texture = ExtResource("8_3e61l")

[connection signal="button_down" from="PurchasePanel/PurchaseRefineryStation" to="." method="_on_purchase_refinery_station_button_down"]
